# cookiecutter-python-app

./: Makefile  cookiecutter.json
.github/: dependabot.yaml
.github/workflows/: check.yaml
hooks/: post_gen_project.py  post_gen_project.sh  pre_prompt.py
tests/: Makefile  common.py  main.py  main_test.py  pyproject.toml  test_git.py
tests/data/defaults/: .gitignore  Makefile  README.md  pyproject.toml
tests/data/defaults/.github/workflows/: check.yaml
tests/data/defaults/src/my_python_app/: __init__.py  __main__.py  cli.py  core.py
tests/data/defaults/tests/: test_main.py
{{ cookiecutter.slug }}/: Makefile  pyproject.toml
{{ cookiecutter.slug }}/src/{{ cookiecutter.package }}/: __main__.py  cli.py
{{ cookiecutter.slug }}/tests/: test_main.py
